Updated architecture to streamline JS and fix JS issue with production build

--- a/assets/css/_mixins.scss
+++ b/assets/css/_mixins.scss
@@ -2,8 +2,9 @@
   content: '';
   position: absolute;
   display: inline-block;
-  width: 101%;
+  width: 102%;
   background: white;
+  margin-left: -1%;
   transform: rotate(-1.8deg);
 }
 
