--- a/assets/css/_fonts.scss
+++ b/assets/css/_fonts.scss
@@ -8,9 +8,17 @@
 
 @font-face {
     font-family: 'Source Sans Pro';
-    src: url('../fonts/sourcesanspro-lightit-webfont.woff2') format('woff2'),
-         url('../fonts/sourcesanspro-lightit-webfont.woff') format('woff');
-    font-weight: 300;
+    src: url('../fonts/sourcesanspro-regular-webfont.woff2') format('woff2'),
+         url('../fonts/sourcesanspro-regular-webfont.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('../fonts/sourcesanspro-it-webfont.woff2') format('woff2'),
+         url('../fonts/sourcesanspro-it-webfont.woff') format('woff');
+    font-weight: 400;
     font-style: italic;
 }
 
@@ -20,12 +28,4 @@
          url('../fonts/sourcesanspro-semibold-webfont.woff') format('woff');
     font-weight: 600;
     font-style: normal;
-}
-
-@font-face {
-    font-family: 'Source Sans Pro';
-    src: url('../fonts/sourcesanspro-semiboldit-webfont.woff2') format('woff2'),
-         url('../fonts/sourcesanspro-semiboldit-webfont.woff') format('woff');
-    font-weight: 600;
-    font-style: italic;
 }
