--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -8,77 +8,97 @@ $color-secondary-light: #f2ebbf;
 $color-bright:          #f06060;
 $color-text-white:      #ffffff;
 $color-text-light:      #b8adb0;
+$color-text-medium:     color($color-neutral tint(25%));
 $color-text-neutral:    #5c4b51;
+$color-text-bright:     #f06060;
 
 body {
   color: $color-text-neutral;
   font-family: $font-default;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 400;
 
   * {
     box-sizing: border-box;
   }
 }
 
-h1, h2, h3, h4 {
-  font-weight: 600;
-}
-
 h1 {
-  font-size: 2.25em;
+  color: $color-text-neutral;
+  font-size: 3.25em;
   font-weight: 300;
-  letter-spacing: 0.25em;
+  letter-spacing: 0.15em;
   text-transform: uppercase;
 }
 
 h2 {
-  color: $color-text-light;
+  color: $color-secondary;
+  font-size: 3em;
   font-weight: 300;
-  font-size: 2em;
   letter-spacing: 0.15em;
+  text-transform: uppercase;
 }
 
 h3 {
-  font-size: 2em;
+  font-size: 2.25em;
   font-weight: 600;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.075em;
   text-transform: uppercase;
 }
 
 h4 {
   color: $color-text-light;
+  font-size: 1.25em;
   font-weight: 300;
-  font-size: 1em;
   letter-spacing: 0.15em;
 }
 
 p {
-  font-size: 0.875em;
-  line-height: 1.5em;
+  color: $color-text-medium;
+  font-size: 1rem;
+  line-height: 1.75em;
+}
+
+a {
+  color: color($color-text-bright shade(15%));
+  text-decoration: none;
+  transition: color 0.2s;
+
+  &:visited {
+    color: color($color-text-bright shade(15%));
+  }
+
+  &:hover,
+  &:active {
+    color: $color-text-bright;
+  }
 }
 
 .intro {
   position: relative;
   overflow: hidden;
-
-  @include border-angle-bottom()
+  margin: 0;
 
   .background {
+    @include border-angle-bottom()
+
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 70px);
     background-image: linear-gradient(60deg, $color-primary 20%, $color-secondary);
     opacity: 0.5;
   }
 
   .card {
     position: relative;
+    width: 50%;
+    max-width: 540px;
     background-color: $color-text-white;
     text-align: center;
     padding: 30px 50px 50px;
     border-radius: 6px;
-    margin: 30px 25% 100px;
+    box-shadow: 4px 4px 10px rgba($color-text-light, 0.35);
+    margin: 30px auto;
 
     h1 {
       margin-top: 0.675em;
@@ -86,10 +106,15 @@ p {
     }
 
     h2 {
+      color: $color-text-bright;
+      font-size: 1.5em;
+      letter-spacing: 0.1em;
       margin-top: 0.25em;
     }
 
     p {
+      font-size: 1.125em;
+      line-height: 1.5em;
       margin-top: 24px;
 
       &:last-of-type {
@@ -129,12 +154,20 @@ p {
 .skills,
 .work {
   width: 90%;
-  max-width: 1140px;
-  margin: 0 auto;
+  max-width: 1080px;
+  margin: 90px auto;
 }
 
 .work {
   position: relative;
+
+  h3 {
+    margin-bottom: 0;
+  }
+
+  h4 {
+    margin-top: 4px;
+  }
 
   ul {
     list-style: none;
