--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -3,5 +3,6 @@
 @import '../../node_modules/normalize.css/normalize.css';
 @import '_fonts.scss';
 @import '_mixins.scss';
+@import '_animations.scss';
 @import '_global.scss';
 @import '_slider.scss';
